@@ -1,3 +1,9 @@
+2002-08-02  Deepa Natarajan  <deepa.natarajan@wipro.com>
+
+	* logview.c: Remove some StubCall (), modify the ordering 
+	of menu items as 'Save As' entry has been removed. 
+	Fixes bug #89685.
+
 2002-07-31  Glynn Foster  <glynn.foster@sun.com>
 
 	* logview.c: Remove StubCall ()
